Cumulative update Added debug messages Refactor tabs Changed csv column names Updated background Plugin to work on Android 9+

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Two
+      Capture and Send Data
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -23,7 +23,8 @@
 	    <ion-col>
 	      <ion-list>
 	      	<ion-row>
-	      		<ion-col>Sensor</ion-col><ion-col>Available</ion-col><ion-col>Will Send</ion-col>	      		
+	      		<ion-col>Sensor</ion-col><ion-col>Available</ion-col>
+	      		<!-- <ion-col>Will Send</ion-col> -->
 	      	</ion-row>
 	      	<ion-row>
 	      		<ion-col>Accelerometer</ion-col>
@@ -31,8 +32,7 @@
 	      			<ion-icon name="checkmark" class="check-true" [hidden]="!hasAccelerometer"></ion-icon>
 	      			<ion-icon name="close" class="check-false" [hidden]="hasAccelerometer" size="large"></ion-icon>
 	      		</ion-col>
-	      		<ion-col><ion-toggle [checked]="hasAccelerometer" ></ion-toggle>
-	      		</ion-col>
+	      		<!-- <ion-col><ion-toggle [checked]="hasAccelerometer" ></ion-toggle></ion-col> -->
 	      	</ion-row>
 	      	<ion-row>
 	      		<ion-col>Gyroscope</ion-col>
@@ -40,8 +40,7 @@
 	      			<ion-icon name="checkmark" class="check-true" [hidden]="!hasGyroscope"></ion-icon>
 	      			<ion-icon name="close" class="check-false" [hidden]="hasGyroscope" size="large"></ion-icon>
 	      		</ion-col>
-	      		<ion-col><ion-toggle [checked]="hasGyroscope" ></ion-toggle>
-	      		</ion-col>
+	      		<!-- <ion-col><ion-toggle [checked]="hasGyroscope" ></ion-toggle></ion-col> -->
 	      	</ion-row>
 	      	<ion-row>
 	      		<ion-col>Geolocation</ion-col>
@@ -49,8 +48,7 @@
 	      			<ion-icon name="checkmark" class="check-true" [hidden]="!hasGeolocation"></ion-icon>
 	      			<ion-icon name="close" class="check-false" [hidden]="hasGeolocation" size="large"></ion-icon>
 	      		</ion-col>
-	      		<ion-col><ion-toggle [checked]="hasGeolocation" ></ion-toggle>
-	      		</ion-col>
+	      		<!-- <ion-col><ion-toggle [checked]="hasGeolocation" ></ion-toggle></ion-col> -->
 	      	</ion-row>
 	      </ion-list>
 	    </ion-col>
@@ -71,9 +69,8 @@
 			<h2>
 				General
 			</h2>
-				interval: {{general.interval}}<br/>
 				freq: {{readFrequency}}<br/>
-				time: {{general.time}}<br/>
+				time: {{general.timestamp}}<br/>
 				countMotion: {{countMotionReading}}<br/>
 				countGPS: {{countGPSReading}}<br/>
 			<h2 [hidden]="!hasDeviceMotion">
@@ -91,8 +88,8 @@
 			<h2>
 				GeoLocation
 			</h2>
-				lat: {{geo.lat}}<br/>
-				long: {{geo.long}}<br/>
+				lat: {{geo.latitude}}<br/>
+				long: {{geo.longitude}}<br/>
 				accuracy: {{geo.accuracy}}<br/>
 	    </ion-col>
 	  </ion-row>
